name:               ghc-perf
version:            0.1.0
synopsis:           ghc performance issue repro
description:        ghc perf issue repro
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2017 Harendra Kumar
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

library
    hs-source-dirs:    src
    exposed-modules:   Async

    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-identities -fwarn-incomplete-record-updates
                      -fwarn-incomplete-uni-patterns -fwarn-tabs

    build-depends:     base              >= 4.8   &&  < 5

benchmark bench-O2
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -Wall -O2
  build-depends:
      ghc-perf
    , base                >= 4.8   && < 5
    , criterion           >= 1     && < 2
  default-language: Haskell2010

benchmark bench-O0
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: .
  ghc-options: -Wall -O0
  build-depends:
      ghc-perf
    , base                >= 4.8   && < 5
    , criterion           >= 1     && < 2
  default-language: Haskell2010
